add first hibernate implementation

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,27 +8,18 @@
 <script src="./js/main.js"></script>
 </head>
 <body>
-	<div>
-			<table>
-				<tr>
-					<td><label>username</label></td>
-					<td><input id="username" name="username" type="text" /></td>
-				</tr>
-				<tr>
-					<td><label>password</label></td>
-					<td><input id="password" name="password" type="password" /></td>
-				</tr>
-
-				<tr>
-					<td><input id="lines" name = "lines" type="text" /></td>
-					<td><input id="submit" name = "submit" type="submit" /></td>
-				</tr>
-			</table>
-	</div>
-
-<div>
-	</div>
-
-	<div id="result"></div>
+	<nav id = "main_nav">
+		<div>
+			<a class="nav_item" id="nav_user_management">USER MANAGEMENT</a> 
+			<a class="nav_item" id="nav_fabric_management">FABRIC MANAGEMENT</a>
+		</div>
+	</nav>
+<hr/>
+	<div id="main_panel"></div>
+<hr/>
+	<footer id = "main_footer"></footer>
 </body>
+
+
+
 </html>
