--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Test</title>
-<link rel="stylesheet" type="text/css" href="./css/main.css">
-<script src="./js/jquery.min.js"></script>
-<script src="./js/main.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Test</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/main.js"></script>
 </head>
+
 <body>
-	<nav id = "main_nav">
-		<div>
-			<a class="nav_item" id="nav_user_management">USER MANAGEMENT</a> 
-			<a class="nav_item" id="nav_fabric_management">FABRIC MANAGEMENT</a>
-		</div>
-	</nav>
-<hr/>
-	<div id="main_panel"></div>
-<hr/>
-	<footer id = "main_footer"></footer>
+    <div id="wrapper">
+        <div id="navigation" class="curved container">
+            <span id="nav-user"><a>User Management</a>
+            </span>
+            <span id="nav-fabric"><a>Fabric Management</a>
+            </span>
+            <span id="nav-logon-off"><a href="">Log off</a>
+            </span>
+            <br class="separator" />
+        </div>
+        <div id="upper" class="curved container">
+            <div></div>
+            <br class="separator" />
+        </div>
+        <div id="middle" class="curved container">
+            
+        </div>
+
+        <div id="footer" class="curved container">
+            <br class="separator" />
+        </div>
+
+        <div class="copyright">
+            <p> Copyright &copy; FabricLib. All Rights Reserved</p>
+                <hr />
+        </div>
+    </div>
 </body>
 
 
