--- a/WebContent/subpages/addUser.html
+++ b/WebContent/subpages/addUser.html
@@ -1,22 +1,29 @@
 <div>
-	<table>
-		<tr>
-			<td><label>username</label></td>
-			<td><input required="required" id="add_user_username" name="username" type="text" /></td>
-		</tr>
-		<tr>
-			<td><label>password</label></td>
-			<td><input required="required" id="add_user_password" name="password"
-				type="password" /></td>
-		</tr>
+	
+<form class="form-horizontal" role="form">
+  <div class="form-group">
+    <label for="add_user_username" class="col-sm-2 control-label">username</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="add_user_username" placeholder="username">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="add_user_password" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="add_user_password" placeholder="Password">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Add</button>
+    </div>
+  </div>
+</form>
 
-		<tr>
-			<td></td>
-			<td><button id="add_user_submit"> Add </button></td>
-		</tr>
-	</table>
 </div>
 	<script>
+	(function() {
 		$(document).ready(function() {
 
 			$("#add_user_submit").click(function() {
@@ -42,4 +49,6 @@
 			});
 
 		});
+	})();
+		
 	</script>
