--- a/WebContent/subpages/fabric.html
+++ b/WebContent/subpages/fabric.html
@@ -1,24 +1,31 @@
 <div>
-	<ul>
-		<li><a id="addFabric">Add Fabric</a></li>
-		<li><a id="uploadFabric">Upload Fabric</a></li>
-		<li><a id="searchFabric">Search Fabric</a></li>
-	</ul>
+<ul class="nav nav-pills nav-stacked fabric-menu">
+  <li id="addFabric"><a href>Add Fabric</a></li>
+	<li id="uploadFabric"><a href >Upload Fabric</a></li>
+	<li id="searchFabric"><a href >Search Fabric</a></li>
+</ul>
 </div>
 
 <script>
+(function() {
 	$(document).ready(function() {
 
-		$("#addFabric").click(function() {
+		$("#addFabric").click(function(e) {
+			e.preventDefault();
 			getFabricPage("subpages/addFabric.html");
+			activeMenu("addFabric");
 		});
 		
-		$("#uploadFabric").click(function() {
+		$("#uploadFabric").click(function(e) {
+			e.preventDefault();
 			getFabricPage("subpages/uploadFabric.html");
+			activeMenu("uploadFabric");
 		});
 		
-		$("#searchFabric").click(function() {
+		$("#searchFabric").click(function(e) {
+			e.preventDefault();
 			getFabricPage("subpages/searchFabric.html");
+			activeMenu("searchFabric");
 		});
 	});
 
@@ -36,4 +43,10 @@
 			}
 		});
 	}
+	
+	function activeMenu(menu) {
+		$(".fabric-menu li.active").removeClass("active");
+		$(".fabric-menu #" + menu).addClass("active");
+	}
+})();	
 </script>
