--- a/WebContent/subpages/searchFabric.html
+++ b/WebContent/subpages/searchFabric.html
@@ -1,164 +1,136 @@
-<div>
-    <table id="fabric_table">
-        <tr class="input">
-            <td>
-                <span>Hanger No.</span>
-            </td>
-            <td>
-                <input class="required" id="hangerNo" name="hangerNo" type="text" />
-            </td>
-        </tr>
-
-        <tr class="input">
-            <td>
-                <span>Construction</span>
-            </td>
-            <td>
-                <input id="cstructnWarp" name="cstructnWarp" type="text" />
-                <input id="cstructnWeft" name="cstructnWeft" type="text" />
-            </td>
-        </tr>
-
-
-        <tr class="input">
-            <td>
-                <span>Yarn Size</span>
-            </td>
-            <td>
-                <input id="yarnWarp" name="yarnWarp" type="text" />
-                <input id="yarnWeft" name="yarnWeft" type="text" />
-            </td>
-        </tr>
-
-        <tr class="input">
-            <td>
-                <span>Content</span>
-            </td>
-            <td>
-                <input id="content" name="content" type="text" />
-            </td>
-        </tr>
-
-        <tr class="input">
-            <td>
-                <span>Status</span>
-            </td>
-            <td>
-                <input id="status" name="status" type="text" />
-            </td>
-        </tr>
-
-        <tr class="input">
-            <td>
-                <span>Weaving</span>
-            </td>
-            <td>
-                <input id="weaving" name="weaving" type="text" />
-            </td>
-        </tr>
-
-        <tr class="input">
-            <td>
-                <span>Finishing</span>
-            </td>
-            <td>
-                <input id="finishing" name="finishing" type="text" />
-            </td>
-        </tr>
-
-        <tr class="input hidden">
-            <td>
-                <span>Width</span>
-            </td>
-            <td>
-                <input id="width" name="width" type="text" />
-            </td>
-        </tr>
-
-        <tr class="input hidden">
-            <td>
-                <span>Weight</span>
-            </td>
-            <td>
-                <input id="weight" name="weight" type="text" />
-            </td>
-        </tr>
-
-        <tr class="input">
-            <td>
-                <span>Article</span>
-            </td>
-            <td>
-                <input id="article" name="article" type="text" />
-            </td>
-        </tr>
-        <tr class="input">
-            <td>
-                <span>OriginalPrice</span>
-            </td>
-            <td>
-                <input id="originalPrice" name="originalPrice" type="text" />
-            </td>
-        </tr>
-        <tr class="input">
-            <td>
-                <span>FinalPrice</span>
-            </td>
-            <td>
-                <input id="finalPrice" name="finalPrice" type="text" />
-            </td>
-        </tr>
-
-    </table>
-    <div id="fabric_table_msg"></div>
-
-    <div>
-        <button id="search_fabric">Search</button>
+<div class="container-fluid">
+<form class="form-horizontal" role="form">
+  <div class="form-group">
+    <label for="hangerNo" class="col-sm-2 control-label">Hanger No.</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="hangerNo" name="hangerNo" placeholder="">
     </div>
+  </div>
+  <div class="form-group">
+    <label for="cstructnWarp" class="col-sm-2 control-label">Construction</label>
+    <div class="col-sm-10 input-group">
+	  <input class="form-control" style="width:50%;" id="cstructnWarp" name="cstructnWarp" type="text" />
+      <input class="form-control" style="width:50%;" id="cstructnWeft" name="cstructnWeft" type="text" />
+	</div>
+    	
+  </div>
+  <div class="form-group">
+    <label for="yarnWarp" class="col-sm-2 control-label">Yarn Size</label>
+    <div class="col-sm-10 input-group">
+    	<input class="form-control" style="width:50%;" id="yarnWarp" name="yarnWarp" type="text" />
+        <input class="form-control" style="width:50%;" id="yarnWeft" name="yarnWeft" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="content" class="col-sm-2 control-label">Content</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="content" name="content" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="status" class="col-sm-2 control-label">Status</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="status" name="status" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="weaving" class="col-sm-2 control-label">Weaving</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="weaving" name="weaving" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="finishing" class="col-sm-2 control-label">Finishing</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="finishing" name="finishing" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="width" class="col-sm-2 control-label">Width</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="width" name="width" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="weight" class="col-sm-2 control-label">Weight</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="weight" name="weight" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="article" class="col-sm-2 control-label">Article</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="article" name="article" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="originalPrice" class="col-sm-2 control-label">OriginalPrice</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="originalPrice" name="originalPrice" type="text" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="finalPrice" class="col-sm-2 control-label">FinalPrice</label>
+    <div class="col-sm-10">
+    	<input class="form-control" id="finalPrice" name="finalPrice" type="text" />
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default" id="search_fabric">Search</button>
+    </div>
+  </div>
+</form>
+
+    <div id="fabric_table_msg"></div>
 
 </div>
 <script>
-$(document).ready(function() {
+(function() {
+	$(document).ready(function() {
 
-    $(".required").after("<span class='empty_message'>*</span>");
+	    $(".required").after("<span class='empty_message'>*</span>");
 
-    $("#search_fabric").click(function() {
+	    $("#search_fabric").click(function() {
 
-    });
+	    });
 
-});
+	});
 
 
-function requestAddFabric() {
-    $("#footer").html("");
-    $.ajax({
-        type: "post",
-        url: "./AddFabric",
-        cache: false,
-        data: {
-            hangerNo: $("#hangerNo").val(),
-            cstructnWarp: $("#cstructnWarp").val(),
-            cstructnWeft: $("#cstructnWeft").val(),
-            yarnWarp: $("#yarnWarp").val(),
-            yarnWeft: $("#yarnWeft").val(),
-            content: $("#content").val(),
-            status: $("#status").val(),
-            weaving: $("#weaving").val(),
-            finishing: $("#finishing").val(),
-            width: $("#width").val(),
-            weight: $("#weight").val(),
-            article: $("#article").val(),
-            originalPrice: $("#originalPrice").val(),
-            finalPrice: $("#finalPrice").val()
-        },
-        // cache:false,
-        // dataType:'json',
-        success: function(data) {
-            $("#footer").html(data);
-        },
-        error: function() {
-            $("#footer").html("error");
-        }
-    });
-}
+	function requestAddFabric() {
+	    $("#footer").html("");
+	    $.ajax({
+	        type: "post",
+	        url: "./AddFabric",
+	        cache: false,
+	        data: {
+	            hangerNo: $("#hangerNo").val(),
+	            cstructnWarp: $("#cstructnWarp").val(),
+	            cstructnWeft: $("#cstructnWeft").val(),
+	            yarnWarp: $("#yarnWarp").val(),
+	            yarnWeft: $("#yarnWeft").val(),
+	            content: $("#content").val(),
+	            status: $("#status").val(),
+	            weaving: $("#weaving").val(),
+	            finishing: $("#finishing").val(),
+	            width: $("#width").val(),
+	            weight: $("#weight").val(),
+	            article: $("#article").val(),
+	            originalPrice: $("#originalPrice").val(),
+	            finalPrice: $("#finalPrice").val()
+	        },
+	        // cache:false,
+	        // dataType:'json',
+	        success: function(data) {
+	            $("#footer").html(data);
+	        },
+	        error: function() {
+	            $("#footer").html("error");
+	        }
+	    });
+	}
+})();
+
 </script>
