--- a/WebContent/subpages/uploadFabric.html
+++ b/WebContent/subpages/uploadFabric.html
@@ -1,15 +1,16 @@
-<div>
-	<input type="file" />
-	<div id="fabric_upload_msg"></div>
-	<div>
-		<button id="upload_fabric">Upload</button>
-	</div>
-</div>
+<form role="form">
+  <div class="form-group">
+    <label for="exampleInputFile">File input</label>
+    <input type="file" id="exampleInputFile">
+  </div>
+  <button type="submit" class="btn btn-default" id="upload_fabric">Upload</button>
+</form>
+<div id="fabric_upload_msg"></div>
 <script>
 	$(document).ready(function() {
 
 		$("#upload_fabric").click(function() {
 
 		});
-	});}
+	});
 </script>
