--- a/WebContent/subpages/user.html
+++ b/WebContent/subpages/user.html
@@ -1,20 +1,24 @@
-<div>
-	<ul>
-		<li><a id="addUser">Add User</a></li>
-		<li><a id="searchUser">Search User</a></li>
-	</ul>
-</div>
+<ul class="nav nav-pills nav-stacked user-menu">
+  <li id="addUser"><a href>Add User</a></li>
+  <li id="searchUser"><a href>Search User</a></li>
+</ul>
 
 <script>
+(function() {
 	$(document).ready(function() {
 
-		$("#addUser").click(function() {
+		$("#addUser").click(function(e) {
+			e.preventDefault();
 			getUserPage("subpages/addUser.html");
+			activeMenu("addUser");
 		});
-		$("#searchUser").click(function() {
+		$("#searchUser").click(function(e) {
+			e.preventDefault();
 			getUserPage("subpages/searchUser.html");
+			activeMenu("searchUser");
 		});
 
+		
 	});
 
 	function getUserPage(pageUrl) {
@@ -31,4 +35,11 @@
 			}
 		});
 	}
+	
+	function activeMenu(menu) {
+		$(".user-menu li.active").removeClass("active");
+		$(".user-menu #" + menu).addClass("active");
+	}
+})();
+	
 </script>
