--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,8 +5,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Test</title>
 <link rel="stylesheet" type="text/css" href="./css/main.css">
+<link rel="stylesheet" type="text/css" href="./css/jquery.dataTables.css">
 <script src="./js/jquery.min.js"></script>
 <script src="./js/main.js"></script>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/json-to-table.js"></script>
+<script src="./js/jquery.dataTables.js"></script>
 </head>
 
 <body>
