--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,40 +2,82 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Test</title>
-<link rel="stylesheet" type="text/css" href="./css/main.css">
-<link rel="stylesheet" type="text/css" href="./css/jquery.dataTables.css">
-<script src="./js/jquery.min.js"></script>
-<script src="./js/main.js"></script>
-<script src="./js/jquery.min.js"></script>
-<script src="./js/json-to-table.js"></script>
-<script src="./js/jquery.dataTables.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Test</title>
+    <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="./bower_components/datatables/media/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/menu.css">
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/json-to-table.js"></script>
 </head>
 
 <body>
-	<div id="wrapper">
-		<div id="navigation" class="curved container">
-			<span id="nav-user"><a>User Management</a> </span> <span
-				id="nav-fabric"><a>Fabric Management</a> </span> <span
-				id="nav-logon-off"><a href="">Log off</a> </span> <br
-				class="separator" />
-		</div>
-		<div id="upper" class="curved container">
-			<div></div>
-			<br class="separator" />
-		</div>
-		<div id="middle" class="curved container"></div>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="">Fabric</a>
+        </div>
 
-		<div id="footer" class="curved container">
-			<br class="separator" />
-		</div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav main-menu">
+                <li id="nav-user"><a href="">User Management</a></li>
+                <li id="nav-fabric"><a href="">Fabric Management</a></li>
+            </ul>
+            <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li id="nav-logon-off"><a href="">Log off</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
 
-		<div class="copyright">
-			<p>Copyright &copy; FabricLib. All Rights Reserved</p>
-			<hr />
-		</div>
-	</div>
+<div class="main container container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+            <div id="upper" class="menu">
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div id="middle" class="curved"></div>
+        </div>
+    </div>
+
+    <div id="footer" class="curved container">
+        <br class="separator" />
+    </div>
+
+    <hr />
+    <div class="copyright">
+        <p>Copyright &copy; FabricLib. All Rights Reserved</p>
+    </div>
+</div>
 </body>
 
 
