--- a/WebContent/subpages/addUser.html
+++ b/WebContent/subpages/addUser.html
@@ -1,45 +1,57 @@
 <div>
-	<table>
-		<tr>
-			<td><label>username</label></td>
-			<td><input required="required" id="add_user_username" name="username" type="text" /></td>
-		</tr>
-		<tr>
-			<td><label>password</label></td>
-			<td><input required="required" id="add_user_password" name="password"
-				type="password" /></td>
-		</tr>
+	
+<form id="addUserForm" class="form-horizontal" role="form"
+      action="./AddUser">
+  <div class="form-group">
+    <label for="add_user_username" class="col-sm-2 control-label">Username</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="add_user_username" name="username" placeholder="Username">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="add_user_password" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="add_user_password" name="password" placeholder="Password">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Add</button>
+    </div>
+  </div>
+</form>
 
-		<tr>
-			<td></td>
-			<td><button id="add_user_submit"> Add </button></td>
-		</tr>
-	</table>
 </div>
 	<script>
-		$(document).ready(function() {
+	(function() {
+        $( "#addUserForm" ).submit(function( event ) {
 
-			$("#add_user_submit").click(function() {
+            // Stop form from submitting normally
+            event.preventDefault();
 
-				$.ajax({
-					type : "post",
-					url : "./AddUser",
-					cache : false,
-					data : {
-						username : $("#add_user_username").val(),
-						password : $("#add_user_password").val()
-					},
-					// cache:false,
-					// dataType:'json',
-					success : function(data) {
-						$("#footer").html(data);
-					},
-					error : function() {
-						$("#footer").html("error");
-					}
-				});
+            // Get some values from elements on the page:
+            var $form = $( this ),
+                    postData = $form.serializeArray(),
+                    formURL = $form.attr( "action" );
 
-			});
+            $.ajax({
+                type : "post",
+                url : formURL,
+                cache : false,
+                data : postData,
+                // cache:false,
+                // dataType:'json',
+                success : function(data) {
+                    $("#footer").html(data);
+                },
+                error : function() {
+                    $("#footer").html("error");
+                }
+            });
 
-		});
+        });
+
+	})();
+		
 	</script>
