add jquery plugin datatables
add jquery plugin datatables to display json data in table

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,13 +6,15 @@
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="./bower_components/datatables/media/css/jquery.dataTables.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="./bower_components/datatables/media/css/jquery.dataTables.min.css">-->
+    <link rel="stylesheet" type="text/css" href="./bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/menu.css">
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script src="./bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.js"></script>
     <script src="./js/main.js"></script>
-    <script src="./js/json-to-table.js"></script>
+    <!--<script src="./js/json-to-table.js"></script>-->
 </head>
 
 <body>
