--- a/WebContent/subpages/searchFabric.html
+++ b/WebContent/subpages/searchFabric.html
@@ -1,79 +1,91 @@
 <div class="container-fluid">
     <form id="searchFabricForm" class="form-horizontal" role="form"
-            action="./SearchFabric">
+          action="./SearchFabric">
         <div class="form-group">
             <label for="hangerNo" class="col-sm-2 control-label">Hanger No.</label>
+
             <div class="col-sm-10 required">
                 <input type="text" class="form-control" id="hangerNo" name="hangerNo" placeholder="">
             </div>
         </div>
         <div class="form-group">
             <label for="cstructnWarp" class="col-sm-2 control-label">Construction</label>
+
             <div class="col-sm-10 input-group">
-                <input class="form-control" style="width:50%;" id="cstructnWarp" name="cstructnWarp" type="text" />
-                <input class="form-control" style="width:50%;" id="cstructnWeft" name="cstructnWeft" type="text" />
+                <input class="form-control" style="width:50%;" id="cstructnWarp" name="cstructnWarp" type="text"/>
+                <input class="form-control" style="width:50%;" id="cstructnWeft" name="cstructnWeft" type="text"/>
             </div>
 
         </div>
         <div class="form-group">
             <label for="yarnWarp" class="col-sm-2 control-label">Yarn Size</label>
+
             <div class="col-sm-10 input-group">
-                <input class="form-control" style="width:50%;" id="yarnWarp" name="yarnWarp" type="text" />
-                <input class="form-control" style="width:50%;" id="yarnWeft" name="yarnWeft" type="text" />
+                <input class="form-control" style="width:50%;" id="yarnWarp" name="yarnWarp" type="text"/>
+                <input class="form-control" style="width:50%;" id="yarnWeft" name="yarnWeft" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="content" class="col-sm-2 control-label">Content</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="content" name="content" type="text" />
+                <input class="form-control" id="content" name="content" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="status" class="col-sm-2 control-label">Status</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="status" name="status" type="text" />
+                <input class="form-control" id="status" name="status" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="weaving" class="col-sm-2 control-label">Weaving</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="weaving" name="weaving" type="text" />
+                <input class="form-control" id="weaving" name="weaving" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="finishing" class="col-sm-2 control-label">Finishing</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="finishing" name="finishing" type="text" />
+                <input class="form-control" id="finishing" name="finishing" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="width" class="col-sm-2 control-label">Width</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="width" name="width" type="text" />
+                <input class="form-control" id="width" name="width" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="weight" class="col-sm-2 control-label">Weight</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="weight" name="weight" type="text" />
+                <input class="form-control" id="weight" name="weight" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="article" class="col-sm-2 control-label">Article</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="article" name="article" type="text" />
+                <input class="form-control" id="article" name="article" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="originalPrice" class="col-sm-2 control-label">OriginalPrice</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="originalPrice" name="originalPrice" type="text" />
+                <input class="form-control" id="originalPrice" name="originalPrice" type="text"/>
             </div>
         </div>
         <div class="form-group">
             <label for="finalPrice" class="col-sm-2 control-label">FinalPrice</label>
+
             <div class="col-sm-10">
-                <input class="form-control" id="finalPrice" name="finalPrice" type="text" />
+                <input class="form-control" id="finalPrice" name="finalPrice" type="text"/>
             </div>
         </div>
 
@@ -86,11 +98,50 @@
 
     <div id="fabric_table_msg"></div>
 
+    <hr>
+
+    <table id="searchFabricRes" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    </table>
+
 </div>
 <script>
-    (function() {
+    (function () {
+        // TODO TEST
+//        var data = [
+//            {"id": 0, "hangerNo": "TEST", "inputDate": null, "printOut": null, "cstructnWarp": "233", "cstructnWeft": "233", "yarnWarp": null, "yarnWeft": null, "content": "23",
+//                "status": null, "weaving": "323", "finishing": null,
+//                "width": "434", "weight": "32", "article": "Article1", "originalPrice": null, "finalPrice": null},
+//            {"id": 0, "hangerNo": "TEST", "inputDate": null, "printOut": null, "cstructnWarp": "233", "cstructnWeft": "233", "yarnWarp": null, "yarnWeft": null, "content": "23", "status": null, "weaving": "323", "finishing": null, "width": "434", "weight": "32", "article": "Article1", "originalPrice": null, "finalPrice": null},
+//            {"id": 0, "hangerNo": "TEST", "inputDate": null, "printOut": null, "cstructnWarp": "233", "cstructnWeft": "233", "yarnWarp": null, "yarnWeft": null, "content": "23", "status": null, "weaving": "323", "finishing": null, "width": "434", "weight": "32", "article": "Article1", "originalPrice": null, "finalPrice": null},
+//            {"id": 0, "hangerNo": "TEST", "inputDate": null, "printOut": null, "cstructnWarp": "233", "cstructnWeft": "233", "yarnWarp": null, "yarnWeft": null, "content": "23", "status": null, "weaving": "323", "finishing": null, "width": "434", "weight": "32", "article": "Article1", "originalPrice": null, "finalPrice": null}
+//        ];
 
-        $( "#searchFabricForm" ).submit(function( event ) {
+
+        var host_list_table = $('#searchFabricRes').dataTable({
+            "data": [],
+            "columns": [
+                { "data": "id", title: "Id" },
+                { "data": "hangerNo", title: "Hanger No." },
+                { "data": "inputDate", title: "Input Date"},
+                { "data": "cstructnWarp", title: "CstructnWarp" },
+                { "data": "cstructnWeft", title: "CstructnWeft" },
+                { "data": "yarnWarp", title: "YarnWarp" },
+                { "data": "printOut", title: "PrintOut" },
+                { "data": "content", title: "Content" },
+                { "data": "status", title: "Status" },
+                { "data": "weaving", title: "Weaving" },
+                { "data": "finishing", title: "Finishing" },
+                { "data": "width", title: "Width" },
+                { "data": "weight", title: "Weight" },
+                { "data": "article", title: "Article" },
+                { "data": "originalPrice", title: "Original Price" },
+                { "data": "finalPrice", title: "Final Price" }
+            ],
+            "scrollY": 300,
+            "scrollX": true
+        });
+
+        $("#searchFabricForm").submit(function (event) {
 
             // Stop form from submitting normally
             event.preventDefault();
@@ -108,11 +159,14 @@
                 data: postData,
                 // cache:false,
                 // dataType:'json',
-                success: function(data) {
-                    $("#footer").html(ConvertJsonToTable(eval(data),"table_id","display"));
-                    $('#table_id').DataTable();
+                success: function (data) {
+                    var data = JSON.parse(data);
+                    host_list_table.fnClearTable();
+                    if(data&&data.length) {
+                        host_list_table.fnAddData(data, true);
+                    }
                 },
-                error: function() {
+                error: function () {
                     $("#footer").html("error");
                 }
             });
