--- a/WebContent/subpages/uploadFabric.html
+++ b/WebContent/subpages/uploadFabric.html
@@ -1,4 +1,5 @@
-<form role="form">
+<form role="form" action="./UploadFabric" method="post"
+                        enctype="multipart/form-data">
   <div class="form-group">
     <label for="exampleInputFile">File input</label>
     <input type="file" id="exampleInputFile">
@@ -10,7 +11,7 @@
 	$(document).ready(function() {
 
 		$("#upload_fabric").click(function() {
-
+               
 		});
 	});
 </script>
